@@ -1,5 +1,6 @@
 This file shows the changes in this release of xPDO.
 
+- Fix related_object installation in xPDOObjectVehicle
 - Add criteria support to aggregates and composites
 
 xPDO 2.2.3-pl (March 15, 2012)
